# sycamore-rocket-minimal-template

./: .gitpod.yml  Cargo.toml  README.md
app/: Cargo.toml
app/src/: lib.rs  main.rs
src/: main.rs
