[package]
authors = [""]
edition = "2018"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "cd91d64", features = [
    "ssr",
] }
wasm-bindgen = "0.2.77"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3.54"
